--- a/views/admin/layout.njk
+++ b/views/admin/layout.njk
@@ -12,7 +12,7 @@
     <div class="content-admin">
         <div class="header">
             <div>
-                <img src="/assets/logowhite.png" alt="">
+                <a href="/admin/recipes"><img src="/assets/logowhite.png" alt=""></a>
             </div>
         </div>
         
@@ -20,6 +20,6 @@
         {% endblock %}
 
     </div>
-    <script src="/utils.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
