--- a/views/admin/edit.njk
+++ b/views/admin/edit.njk
@@ -18,7 +18,7 @@
         <input type="hidden" name="id" value={{recipe.id}}>
     </form>
 
-    <form class="form-delete" id="my-form" action="/admin/recipes?_method=DELETE" method="post">
+    <form id="my-form" method="POST" action="/admin/recipes?_method=DELETE">
 
         <input type="hidden" name="id" value={{recipe.id}}>
         <button type="submit">Deletar</button>
