--- a/views/admin/recipes/edit.njk
+++ b/views/admin/recipes/edit.njk
@@ -1,4 +1,4 @@
-{% extends "admin/layout.njk" %}
+{% extends "admin/recipes/layout.njk" %}
 
 {% block headAdmin %}
     <title>Edition</title>
@@ -14,7 +14,7 @@
                 <button type="submit">Salvar receita</button>
             </div>
         </div>
-        {% include 'admin/fields.njk'%}
+        {% include 'admin/recipes/fields.njk'%}
         <input type="hidden" name="id" value={{recipe.id}}>
     </form>
 
