--- a/views/admin/chefs/create.njk
+++ b/views/admin/chefs/create.njk
@@ -10,6 +10,6 @@
             <h2>Criar Receita</h2>
             <button type="submit">Salvar receita</button>
         </div>
-        {% include 'admin/recipes/fields.njk'%}
+        {% include 'admin/fields.njk'%}
     </form>
 {% endblock %}
