--- a/views/admin/layout.njk
+++ b/views/admin/layout.njk
@@ -13,6 +13,10 @@
         <div class="header">
             <div>
                 <a href="/admin/recipes"><img src="/assets/logowhite.png" alt=""></a>
+                <div class="">
+                    <a href="">Receitas</a>
+                    <a href="">Chefs</a>
+                </div>
             </div>
         </div>
         
