--- a/src/app/views/admin/recipes/create.njk
+++ b/src/app/views/admin/recipes/create.njk
@@ -7,7 +7,7 @@
 {% block contentAdmin %}
     <form class="content-body" method="POST" action="/admin/recipes">
         <div class="content-header">
-            <h2>Criar Receita</h2>
+            <h2>Criando Receita</h2>
             <button type="submit">Salvar receita</button>
         </div>
         {% include 'admin/recipes/fields.njk'%}
