--- a/src/app/views/admin/recipes/fields.njk
+++ b/src/app/views/admin/recipes/fields.njk
@@ -16,11 +16,11 @@
     </div>
 
     <div class="input">
-        <h3>Nome do Autor</h3>
+        <h3>Chef</h3>
         <input 
         type="text" 
-        name="author"
-        value="{{recipe.author}}"/>
+        name="chef"
+        value="{{recipe.chef}}"/>
     </div>
 
     <div class="input" id="ingredients">
