feature added: create recipe

--- a/src/app/views/admin/recipes/fields.njk
+++ b/src/app/views/admin/recipes/fields.njk
@@ -17,10 +17,11 @@
 
     <div class="input">
         <h3>Chef</h3>
-        <input 
-        type="text" 
-        name="chef_id"
-        value="{{recipe.chef}}"/>
+
+        <select name="chef_id">
+            <option value=""></option>
+        </select>
+
     </div>
 
     <div class="input" id="ingredients">
